--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,7 +80,7 @@ members = [
     "Fearless Concurrency/Threads/Threads Task",
     "Iterators & Closures/Standard Library Types/Intro",
     "Iterators & Closures/Standard Library Types/Shared-State Concurrency",
-    "Iterators & Closures/Standard Library Types/Arc 1",
+    "Iterators & Closures/Standard Library Types/Arc",
     "Iterators & Closures/Standard Library Types/Iterator 3",
     "Iterators & Closures/Standard Library Types/Iterators 4"    
 ]
