Iterators & Closures - Standard Library Types - Iterators : placeholder added

--- a/Iterators & Closures/Standard Library Types/Iterators 4/task-info.yaml
+++ b/Iterators & Closures/Standard Library Types/Iterators 4/task-info.yaml
@@ -4,5 +4,9 @@ files:
   visible: false
 - name: src/lib.rs
   visible: true
+  placeholders:
+  - offset: 40
+    length: 83
+    placeholder_text: //Implement the function here
 - name: tests/tests.rs
   visible: false
