fix(Course): Inconsistency in task types fixed
Changed to Theory tasks:
Common Programming Concepts -> Variables:
Intro, Differences Between Variables and Constants
-> Data Types: Scalar
Types, Compound Types
-> If: else if, Repetition with
loops
Understanding Ownership -> Move Semantics: Intro, References And
Borrowing, The Slice Type
Modules and Macros -> Modules: Paths for
Referring to an Item in the Module Tree, Bringing Paths into Scope with
the use Keyword
Recoverable and unrecoverable errors -> Error Handling:
Recoverable Errors with Result
Writing Automated Tests -> Tests: Intro,
Adding Custom Failure Messages

Changed to Code tasks:
Common
Programming Concepts -> Variables: Variables and Mutability, Shadowing,
Variables 2
-> Data Types: Boolean, Characters
-> Functions: Return
Type, Return a value
Understanding Ownership -> Move Semantics:
Borrow
Common Collections -> Strings: Returning a String, String
Slice
Writing Automated Tests -> Tests: Assert, Assert_Eq

Closes EDC-179

--- a/Common Programming Concepts/Functions/Return Type/task-info.yaml
+++ b/Common Programming Concepts/Functions/Return Type/task-info.yaml
@@ -1,6 +1,10 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 140
+    length: 3
+    placeholder_text: /*put a type here*/
