--- a/Writing Automated Tests/Tests/Assert/task-info.yaml
+++ b/Writing Automated Tests/Tests/Assert/task-info.yaml
@@ -1,6 +1,10 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/lib.rs
   visible: true
+  placeholders:
+  - offset: 79
+    length: 4
+    placeholder_text: /*smth is missing here*/
