--- a/Common Collections/Strings/Returning a String/task-info.yaml
+++ b/Common Collections/Strings/Returning a String/task-info.yaml
@@ -1,6 +1,13 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 182
+    length: 1
+    placeholder_text: /*and the last part here*/
+  - offset: 163
+    length: 12
+    placeholder_text: /*type the beginning of the trait here*/
