--- a/Common Programming Concepts/Functions/Return a Value/task-info.yaml
+++ b/Common Programming Concepts/Functions/Return a Value/task-info.yaml
@@ -1,6 +1,10 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 118
+    length: 6
+    placeholder_text: /*you could type here*/
