--- a/Common Programming Concepts/Variables/Variables 2/task-info.yaml
+++ b/Common Programming Concepts/Variables/Variables 2/task-info.yaml
@@ -1,6 +1,10 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 21
+    length: 9
+    placeholder_text: /*insert here missing part(s)*/
