--- a/Writing Automated Tests/Tests/Assert_Eq/task-info.yaml
+++ b/Writing Automated Tests/Tests/Assert_Eq/task-info.yaml
@@ -1,6 +1,10 @@
-type: theory
+type: edu
 files:
 - name: Cargo.toml
   visible: false
 - name: src/lib.rs
   visible: true
+  placeholders:
+  - offset: 85
+    length: 4
+    placeholder_text: /*insert a correct assertion to pass the task*/
