fix(Task - Common Programming Principles - Variables - Variables 2): Mock test added
Test with an allways-true assertion added to avoid the "no test have
run" message.

--- a/Common Programming Concepts/Variables/Variables 2/task-info.yaml
+++ b/Common Programming Concepts/Variables/Variables 2/task-info.yaml
@@ -8,3 +8,5 @@ files:
   - offset: 21
     length: 9
     placeholder_text: /*insert here missing part(s)*/
+- name: tests/tests.rs
+  visible: false
