fix(Tasks): Mock tests added to avoid no tests have run
Allways-passing tests added to run the compilation inside the
tasks:
Common Programming Concepts -> Variables: Variables and
Mutability, Shadowing, Variables 2
-> Data Types: Boolean, Characters
->
Functions: Return Type, Return a value
Understanding Ownership -> Move
Semantics: Borrow
Common Collections -> Strings: Returning a String,
String Slice
Writing Automated Tests -> Tests: Assert, Assert_Eq

Closes EDC-188

--- a/Common Collections/Strings/String Slice/task-info.yaml
+++ b/Common Collections/Strings/String Slice/task-info.yaml
@@ -8,3 +8,5 @@ files:
   - offset: 106
     length: 1
     placeholder_text: /*coerce the String into a string slice here*/
+- name: tests/tests.rs
+  visible: false
