fix(Tasks): Mock tests added to avoid no tests have run Allways-passing tests added to run the compilation inside the tasks: Common Programming Concepts -> Data Types: Boolean, Characters -> Functions: Return Type, Return a value Understanding Ownership -> Move	Semantics: Borrow Common Collections -> Strings: Returning a String, String Slice Writing Automated Tests -> Tests: Assert, Assert_Eq Closes EDC-188

--- a/Common Programming Concepts/Data Types/Boolean/task-info.yaml
+++ b/Common Programming Concepts/Data Types/Boolean/task-info.yaml
@@ -9,3 +9,5 @@ files:
     length: 19
     placeholder_text: // Finish the rest of this line like the example! Or make it
       be false!
+- name: tests/tests.rs
+  visible: false
