--- a/Common Programming Concepts/Data Types/Characters/task-info.yaml
+++ b/Common Programming Concepts/Data Types/Characters/task-info.yaml
@@ -11,3 +11,5 @@ files:
       // Finish this line like the example! What's your favorite character?
           // Try a letter, try a number, try a special character, try a character
           // from a different language than your own, try an emoji!
+- name: tests/tests.rs
+  visible: false
