--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,6 +1,6 @@
 title: Rustlings
 language: English
-summary: Small exercises to get you used to reading and writing Rust code!
+summary: Small exercises to get you used to reading and writing Rust code! The materials are based on the original course "rustlings" created by Carol Nichols! The course is provided with the materials from The Rust Programming Language book, written by Steve Klabnik and Carol Nichols, with contributions from the Rust Community. The course source code is available at https://github.com/jetbrains-academy/rustlings-course.
 programming_language: Rust
 content:
 - Introduction
