feat(Introduction/ Getting Started): About task added
About task added explaining connection to the book and providing credits

Closes EDC-187

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 
 members = [
+    "Introduction/Getting started/About",
     "Introduction/Getting started/Installation",
     "Introduction/Getting started/Hello World",
     "Common Programming Concepts/Variables/Intro",
