fix(Tasks): Mock tests added where they were absent
Mock tests added:
Common Programming Concepts/Data Types/Arrays/
Common
Programming Concepts/Data Types/Slices
Common Programming
Concepts/Functions/Defining a Function
Common Programming
Concepts/Functions/Passing an Argument
Common Programming
Concepts/Functions/Type Annotation of a Parameter
Common Programming
Concepts/Variables/Variables 1
Common Programming
Concepts/Variables/Variables 3
Common Programming
Concepts/Variables/Variables 4
Modules and Macros/Macros/Calling a
Macro
Modules and Macros/Macros/Declaring a Macro
Modules and
Macros/Macros/Macro Arms
Modules and Macros/Macros/Outside of
Module
Modules and Macros/Macros and Modules Test/Test Task
Recoverable
and Unrecoverable Errors/Error Handling/Matching Result 2
Writing
Automated Tests/Tests/Testing Task
Writing Automated Tests/Tests
Test/Times Two Tests

Closes EDC-188

--- a/Common Programming Concepts/Functions/Defining a Function/task-info.yaml
+++ b/Common Programming Concepts/Functions/Defining a Function/task-info.yaml
@@ -8,3 +8,5 @@ files:
   - offset: 30
     length: 12
     placeholder_text: //insert the function declaration here
+- name: tests/tests.rs
+  visible: false
