--- a/Common Programming Concepts/Functions/Type Annotation of a Parameter/task-info.yaml
+++ b/Common Programming Concepts/Functions/Type Annotation of a Parameter/task-info.yaml
@@ -8,3 +8,5 @@ files:
   - offset: 46
     length: 4
     placeholder_text: /*insert the type annotation here*/
+- name: tests/tests.rs
+  visible: false
