--- a/Common Programming Concepts/Data Types/Slices/task-info.yaml
+++ b/Common Programming Concepts/Data Types/Slices/task-info.yaml
@@ -8,3 +8,5 @@ files:
   - offset: 63
     length: 8
     placeholder_text: //type the invocation of the slice here
+- name: tests/tests.rs
+  visible: false
