--- a/Modules and Macros/Macros/Declaring a Macro/task-info.yaml
+++ b/Modules and Macros/Macros/Declaring a Macro/task-info.yaml
@@ -14,3 +14,5 @@ files:
   - offset: 207
     length: 30
     placeholder_text: /*the main function declaration should be below the macro declaration*/
+- name: tests/tests.rs
+  visible: false
