--- a/course-info.yaml
+++ b/course-info.yaml
@@ -4,7 +4,7 @@ summary: Small exercises to get you used to reading and writing Rust code! The m
   are based on the original course "rustlings" created by Carol Nichols! The course
   is provided with the materials from The Rust Programming Language book, written
   by Steve Klabnik and Carol Nichols, with contributions from the Rust Community.
-  The course source code is available at https://github.com/jetbrains-academy/rustlings-course.
+  The course source code is available on <a href = "https://github.com/jetbrains-academy/rustlings-course">github</a>.
 programming_language: Rust
 content:
 - Introduction
