fix(Assert and Assert_eq tasks): tasks converted to theory
tasks converted to theory instead of edu, due to the test problems

--- a/Writing Automated Tests/Tests/Assert/task-info.yaml
+++ b/Writing Automated Tests/Tests/Assert/task-info.yaml
@@ -1,4 +1,4 @@
-type: edu
+type: theory
 files:
 - name: Cargo.toml
   visible: false
@@ -7,6 +7,4 @@ files:
   placeholders:
   - offset: 79
     length: 4
-    placeholder_text: /*smth is missing here*/
-- name: tests/tests.rs
-  visible: false
+    placeholder_text: /**/
