fix(Course cargo.toml): Manifest structure fix to fix updates
mambers structure fixed to include the paths to lessons, exclude field
added, containing .yaml regexp for lesson-info.yaml and
remote-lesson-info.yaml

Closes EDC-208

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,82 +1,24 @@
 [workspace]
 
 members = [
-    "Introduction/Getting started/About",
-    "Introduction/Getting started/Installation",
-    "Introduction/Getting started/Hello World",
-    "Common Programming Concepts/Variables/Intro",
-    "Common Programming Concepts/Variables/Variables and Mutability",
-    "Common Programming Concepts/Variables/Variables 1",
-    "Common Programming Concepts/Variables/Differences Between Variables and Constants",
-    "Common Programming Concepts/Variables/Shadowing",
-    "Common Programming Concepts/Variables/Variables 2",
-    "Common Programming Concepts/Variables/Variables 3",
-    "Common Programming Concepts/Variables/Variables 4",
-    "Common Programming Concepts/Data Types/Scalar Types",
-    "Common Programming Concepts/Data Types/Boolean",
-    "Common Programming Concepts/Data Types/Characters",
-    "Common Programming Concepts/Data Types/Compound Types",
-    "Common Programming Concepts/Data Types/Arrays",
-    "Common Programming Concepts/Data Types/Slices",
-    "Common Programming Concepts/Data Types/Tuples",
-    "Common Programming Concepts/Data Types/Tuple Index",
-    "Common Programming Concepts/Functions/Intro",
-    "Common Programming Concepts/Functions/Statements and Expressions",
-    "Common Programming Concepts/Functions/Defining a Function",
-    "Common Programming Concepts/Functions/Type Annotation of a Parameter",
-    "Common Programming Concepts/Functions/Passing an Argument",
-    "Common Programming Concepts/Functions/Return Type",
-    "Common Programming Concepts/Functions/Return a Value",
-    "Common Programming Concepts/Variables and Functions Test/Calculate Price",
-    "Common Programming Concepts/If/Intro",
-    "Common Programming Concepts/If/else if",
-    "Common Programming Concepts/If/Repetition with Loops",
-    "Common Programming Concepts/If/If Task",
-    "Writing Automated Tests/Tests/Intro",
-    "Writing Automated Tests/Tests/Adding Custom Failure Messages",
-    "Writing Automated Tests/Tests/Assert",
-    "Writing Automated Tests/Tests/Assert_Eq",
-    "Writing Automated Tests/Tests/Testing Task",
-    "Writing Automated Tests/Tests Test/Times Two Tests",
-    "Common Collections/Strings/Intro",
-    "Common Collections/Strings/Returning a String",
-    "Common Collections/Strings/String Slice",
-    "Common Collections/String Test/Strings and strs",
-    "Modules and Macros/Modules/Intro",
-    "Modules and Macros/Modules/Paths for Referring to an Item in the Module Tree",
-    "Modules and Macros/Modules/Bringing Paths into Scope with the use Keyword",
-    "Modules and Macros/Modules/Separating Modules into Different Files",
-    "Modules and Macros/Modules/Public Modifier",
-    "Modules and Macros/Modules/Public Modifier 2",
-    "Modules and Macros/Macros/Intro",
-    "Modules and Macros/Macros/Calling a Macro",
-    "Modules and Macros/Macros/Declaring a Macro",
-    "Modules and Macros/Macros/Outside of Module",
-    "Modules and Macros/Macros/Macro Arms",
-    "Modules and Macros/Macros and Modules Test/Test Task",
-    "Understanding Ownership/Move Semantics/Intro",
-    "Understanding Ownership/Move Semantics/References and Borrowing",
-    "Understanding Ownership/Move Semantics/The Slice Type",
-    "Understanding Ownership/Move Semantics/Mutable",
-    "Understanding Ownership/Move Semantics/Borrow",
-    "Understanding Ownership/Move Semantics/Mutable Argument",
-    "Understanding Ownership/Move Semantics/Without Arguments",
-    "Recoverable and Unrecoverable Errors/Error Handling/Intro",
-    "Recoverable and Unrecoverable Errors/Error Handling/Recoverable Errors with Result",
-    "Recoverable and Unrecoverable Errors/Error Handling/Generic Data Types",
-    "Recoverable and Unrecoverable Errors/Error Handling/Returning Result",
-    "Recoverable and Unrecoverable Errors/Error Handling/Matching Result",
-    "Recoverable and Unrecoverable Errors/Error Handling/Matching Result 2",
-    "Recoverable and Unrecoverable Errors/Error Handling/Multiple Errors",
-    "Recoverable and Unrecoverable Errors/Error Handling/Option",
-    "Recoverable and Unrecoverable Errors/Error Handling/Result",
-    "Fearless Concurrency/Threads/Intro",
-    "Fearless Concurrency/Threads/Using Message Passing to Transfer Data Between Threads",
-    "Fearless Concurrency/Threads/Extensible Concurrency with the Sync and Send Traits",
-    "Fearless Concurrency/Threads/Threads Task",
-    "Iterators and Closures/Standard Library Types/Intro",
-    "Iterators and Closures/Standard Library Types/Shared-State Concurrency",
-    "Iterators and Closures/Standard Library Types/Arc",
-    "Iterators and Closures/Standard Library Types/Iterator",
-    "Iterators and Closures/Standard Library Types/Factorial"
+    "Introduction/Getting started/*/",
+    "Common Programming Concepts/Variables/*/",
+    "Common Programming Concepts/Data Types/*/",
+    "Common Programming Concepts/Functions/*/",
+    "Common Programming Concepts/Variables and Functions Test/*/",
+    "Common Programming Concepts/If/*/",
+    "Writing Automated Tests/Tests/*/",
+    "Writing Automated Tests/Tests Test/*/",
+    "Common Collections/Strings/*/",
+    "Modules and Macros/Modules/*/",
+    "Modules and Macros/Macros/*/",
+    "Modules and Macros/Macros and Modules Test/*/",
+    "Understanding Ownership/Move Semantics/*/",
+    "Recoverable and Unrecoverable Errors/Error Handling/*/",
+    "Fearless Concurrency/Threads/*/",
+    "Iterators and Closures/Standard Library Types/*/"
+]
+
+exclude = [
+    "**/*.yaml"
 ]
