--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "Writing Automated Tests/Tests/*/",
     "Writing Automated Tests/Tests Test/*/",
     "Common Collections/Strings/*/",
+    "Common Collections/String Test/*/",
     "Modules and Macros/Modules/*/",
     "Modules and Macros/Macros/*/",
     "Modules and Macros/Macros and Modules Test/*/",
