Added placeholder to Variables6, edited placeholder in Variables5

--- a/Common Programming Concepts/Variables/Converting Type/task-info.yaml
+++ b/Common Programming Concepts/Variables/Converting Type/task-info.yaml
@@ -5,7 +5,7 @@ files:
   placeholders:
   - offset: 91
     length: 3
-    placeholder_text: /* TODO */
+    placeholder_text: /* Something missing here! */
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
