--- a/Common Programming Concepts/Variables/Constant Type/task-info.yaml
+++ b/Common Programming Concepts/Variables/Constant Type/task-info.yaml
@@ -2,6 +2,10 @@ type: edu
 files:
 - name: src/main.rs
   visible: true
+  placeholders:
+  - offset: 12
+    length: 6
+    placeholder_text: /* Something wrong with this constant! */
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
