--- a/Common Collections/Strings/Loop Over a Vector/task-info.yaml
+++ b/Common Collections/Strings/Loop Over a Vector/task-info.yaml
@@ -3,9 +3,10 @@ files:
 - name: src/main.rs
   visible: true
   placeholders:
-  - offset: 128
-    length: 21
-    placeholder_text: Declare your vector here
+  - offset: 103
+    length: 8
+    placeholder_text: Fill this up so that each element in the Vec `v` is multiplied
+      by 2.
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
