--- a/Common Collections/Strings/Declaring a Vector/task-info.yaml
+++ b/Common Collections/Strings/Declaring a Vector/task-info.yaml
@@ -2,11 +2,13 @@ type: edu
 files:
 - name: src/main.rs
   visible: true
-  placeholders:
-  - offset: 218
-    length: 11
-    placeholder_text: Declare your vector here
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
   visible: false
+- name: src/lib.rs
+  visible: true
+  placeholders:
+  - offset: 108
+    length: 11
+    placeholder_text: Declare your vector here
