--- a/Common Collections/Strings/Declaring a HashMap/task-info.yaml
+++ b/Common Collections/Strings/Declaring a HashMap/task-info.yaml
@@ -2,14 +2,16 @@ type: edu
 files:
 - name: src/main.rs
   visible: true
-  placeholders:
-  - offset: 174
-    length: 15
-    placeholder_text: Declare your hash map here
-  - offset: 288
-    length: 85
-    placeholder_text: Put more fruits in your basket here!
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
   visible: false
+- name: src/lib.rs
+  visible: true
+  placeholders:
+  - offset: 101
+    length: 15
+    placeholder_text: Declare your hash map here
+  - offset: 215
+    length: 85
+    placeholder_text: Put more fruits in your basket here!
