Updated task code for "Order Struct"; created the test (seems to be working fine)

--- a/Structs/Structs/Order Struct/task-info.yaml
+++ b/Structs/Structs/Order Struct/task-info.yaml
@@ -6,3 +6,9 @@ files:
   visible: true
 - name: tests/tests.rs
   visible: false
+- name: src/lib.rs
+  visible: true
+  placeholders:
+  - offset: 569
+    length: 125
+    placeholder_text: Create your own order using the update syntax and template above!
