Removed main.rs, added task into lib.rs, added proper tests, seems to be working

--- a/Structs/Structs/Struct Logic/task-info.yaml
+++ b/Structs/Structs/Struct Logic/task-info.yaml
@@ -1,20 +1,24 @@
 type: edu
 files:
-- name: src/main.rs
-  visible: true
-  placeholders:
-  - offset: 332
-    length: 9
-    placeholder_text: Something goes here...
-  - offset: 609
-    length: 63
-    placeholder_text: Something goes here...
-  - offset: 753
-    length: 45
-    placeholder_text: Something goes here...
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
   visible: false
 - name: src/lib.rs
   visible: true
+  placeholders:
+  - offset: 288
+    length: 9
+    placeholder_text: Something goes here
+  - offset: 529
+    length: 53
+    placeholder_text: Something goes here
+  - offset: 641
+    length: 3
+    placeholder_text: Add return type
+  - offset: 655
+    length: 45
+    placeholder_text: Something goes here
+  - offset: 514
+    length: 5
+    placeholder_text: Something goes here
