--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "Writing Automated Tests/Tests Test/*/",
     "Common Collections/Strings/*/",
     "Common Collections/String Test/*/",
+    "Enums/Enums and Pattern Matching/*/",
     "Modules and Macros/Modules/*/",
     "Modules and Macros/Macros/*/",
     "Modules and Macros/Macros and Modules Test/*/",
