--- a/course-info.yaml
+++ b/course-info.yaml
@@ -10,6 +10,7 @@ content:
 - Introduction
 - Common Programming Concepts
 - Understanding Ownership
+- Enums
 - Modules and Macros
 - Common Collections
 - Recoverable and Unrecoverable Errors
