Minor edits all over the place

--- a/Enums/Enums and Pattern Matching/lesson-info.yaml
+++ b/Enums/Enums and Pattern Matching/lesson-info.yaml
@@ -1,7 +1,7 @@
 content:
 - Intro
 - Defining an Enum
-- Match Operator
+- The Match Operator
 - If Let
 - Define Enum Variants
 - Enum Variant Types
