--- a/Common Collections/Strings/Declaring a HashMap/task-info.yaml
+++ b/Common Collections/Strings/Declaring a HashMap/task-info.yaml
@@ -11,7 +11,7 @@ files:
   placeholders:
   - offset: 101
     length: 15
-    placeholder_text: Declare your hash map here
+    placeholder_text: // Declare your hash map here
   - offset: 215
     length: 85
-    placeholder_text: Put more fruits in your basket here!
+    placeholder_text: // Put more fruits in your basket here!
