--- a/Common Collections/Strings/Modifying a HashMap/task-info.yaml
+++ b/Common Collections/Strings/Modifying a HashMap/task-info.yaml
@@ -11,5 +11,5 @@ files:
   placeholders:
   - offset: 390
     length: 46
-    placeholder_text: Put new fruits if not already present. Note that you are not
-      allowed to put any type of fruit that's already present!
+    placeholder_text: // Put new fruits if not already present. Note that you are
+      not allowed to put any type of fruit that's already present!
