--- a/Enums/Enums and Pattern Matching/Implement Match/task-info.yaml
+++ b/Enums/Enums and Pattern Matching/Implement Match/task-info.yaml
@@ -3,11 +3,11 @@ files:
 - name: src/lib.rs
   visible: true
   placeholders:
-  - offset: 23
+  - offset: 41
     length: 79
     placeholder_text: '// TODO: implement the message variant types based on their
       usage below'
-  - offset: 612
+  - offset: 651
     length: 273
     placeholder_text: '// TODO: create a match expression to process the different
       message variants'
@@ -15,3 +15,5 @@ files:
   visible: true
 - name: tests/tests.rs
   visible: false
+- name: src/main.rs
+  visible: true
