--- a/Structs/Structs/Initiate Struct/task-info.yaml
+++ b/Structs/Structs/Initiate Struct/task-info.yaml
@@ -11,16 +11,16 @@ files:
   placeholders:
   - offset: 36
     length: 38
-    placeholder_text: Something goes here
+    placeholder_text: // Something goes here
   - offset: 106
     length: 22
-    placeholder_text: Something goes here
+    placeholder_text: // Something goes here
   - offset: 240
     length: 101
-    placeholder_text: Instantiate a classic c struct!
+    placeholder_text: // Instantiate a classic c struct!
   - offset: 423
     length: 65
-    placeholder_text: Instantiate a tuple struct!
+    placeholder_text: // Instantiate a tuple struct!
   - offset: 565
     length: 11
-    placeholder_text: Instantiate a unit struct!
+    placeholder_text: // Instantiate a unit struct!
