--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "Common Programming Concepts/Functions/*/",
     "Common Programming Concepts/Variables, Functions and If Test/*/",
     "Common Programming Concepts/If/*/",
+    "Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/*/",
     "Writing Automated Tests/Tests/*/",
     "Writing Automated Tests/Tests Test/*/",
     "Common Collections/Strings/*/",
