--- a/course-info.yaml
+++ b/course-info.yaml
@@ -10,10 +10,11 @@ content:
 - Introduction
 - Common Programming Concepts
 - Understanding Ownership
-- Enums
 - Modules and Macros
 - Common Collections
 - Recoverable and Unrecoverable Errors
+- Generic Types, Traits and Lifetime
 - Writing Automated Tests
 - Iterators and Closures
 - Fearless Concurrency
+
