--- a/Type Conversions/Type Conversions/AsRef and AsMut/task-info.yaml
+++ b/Type Conversions/Type Conversions/AsRef and AsMut/task-info.yaml
@@ -6,13 +6,13 @@ files:
   - offset: 21
     length: 12
     placeholder_text: |-
-      // Obtain the number of bytes (not characters) in the given argument
-      // Add the AsRef trait appropriately as a trait bound
+      /*Obtain the number of bytes (not characters) in the given argument
+       Add the AsRef trait appropriately as a trait bound*/
   - offset: 113
     length: 12
     placeholder_text: |-
-      // Obtain the number of characters (not bytes) in the given argument
-      // Add the AsRef trait appropriately as a trait bound
+      /* Obtain the number of characters (not bytes) in the given argument
+       Add the AsRef trait appropriately as a trait bound*/
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
