--- a/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/Generics in Structs/task-info.yaml
+++ b/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/Generics in Structs/task-info.yaml
@@ -5,16 +5,16 @@ files:
   placeholders:
   - offset: 18
     length: 3
-    placeholder_text: // Something goes here
+    placeholder_text: /* Something goes here */
   - offset: 39
     length: 1
     placeholder_text: u32
   - offset: 49
     length: 3
-    placeholder_text: // Something goes here
+    placeholder_text: /* Something goes here */
   - offset: 60
     length: 3
-    placeholder_text: // Something goes here
+    placeholder_text: /* Something goes here */
   - offset: 88
     length: 1
     placeholder_text: u32
