--- a/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/Generics in Vec/task-info.yaml
+++ b/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/Generics in Vec/task-info.yaml
@@ -5,7 +5,7 @@ files:
   placeholders:
   - offset: 43
     length: 4
-    placeholder_text: // Something goes here
+    placeholder_text: /* Something goes here */
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
