--- a/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/String Trait/task-info.yaml
+++ b/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/String Trait/task-info.yaml
@@ -5,7 +5,7 @@ files:
   placeholders:
   - offset: 90
     length: 68
-    placeholder_text: // Add your code here
+    placeholder_text: /* Add your code here */
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
