--- a/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/Trait Bound Syntax/task-info.yaml
+++ b/Generic Types, Traits and Lifetime/Generic Types, Traits and Lifetime/Trait Bound Syntax/task-info.yaml
@@ -3,21 +3,21 @@ files:
 - name: src/lib.rs
   visible: true
   placeholders:
+  - offset: 0
+    length: 22
+    placeholder_text: /* Something goes here */
   - offset: 45
     length: 12
-    placeholder_text: // Something goes here
+    placeholder_text: /* Something goes here */
   - offset: 75
     length: 1
     placeholder_text: f32
   - offset: 140
     length: 12
-    placeholder_text: // Something goes here
+    placeholder_text: /* Something goes here */
   - offset: 163
     length: 3
-    placeholder_text: // And here
-  - offset: 0
-    length: 22
-    placeholder_text: // Something goes here
+    placeholder_text: /* Something goes here */
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
