--- a/Recoverable and Unrecoverable Errors/Error Handling/lesson-info.yaml
+++ b/Recoverable and Unrecoverable Errors/Error Handling/lesson-info.yaml
@@ -1,6 +1,7 @@
 content:
 - Intro
 - Recoverable Errors with Result
+- To Panic or Not to Panic
 - Generic Data Types
 - Returning Result
 - Matching Result
