--- a/Common Programming Concepts/If/Add Conditions/task-info.yaml
+++ b/Common Programming Concepts/If/Add Conditions/task-info.yaml
@@ -2,6 +2,13 @@ type: edu
 files:
 - name: src/lib.rs
   visible: true
+  placeholders:
+  - offset: 96
+    length: 20
+    placeholder_text: /* Something goes here */
+  - offset: 127
+    length: 32
+    placeholder_text: /* Something goes here */
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
