--- a/Writing Automated Tests/Tests/How to Write Tests/task-info.yaml
+++ b/Writing Automated Tests/Tests/How to Write Tests/task-info.yaml
@@ -1,6 +1,8 @@
 type: theory
 files:
+- name: Cargo.toml
+  visible: false
 - name: src/main.rs
   visible: true
-- name: Cargo.toml
+- name: src/lib.rs
   visible: true
