Edited listings in "Test Organization", split the section in two: second part in "Submodules in Integration Tests"

--- a/Writing Automated Tests/Tests/Submodules in Integration Tests/task-info.yaml
+++ b/Writing Automated Tests/Tests/Submodules in Integration Tests/task-info.yaml
@@ -7,6 +7,6 @@ files:
 - name: src/lib.rs
   visible: true
 - name: tests/integration_test.rs
-  visible: true
-- name: tests/common.rs
+  visible: false
+- name: tests/common/mod.rs
   visible: false
