--- a/Writing Automated Tests/Tests/lesson-info.yaml
+++ b/Writing Automated Tests/Tests/lesson-info.yaml
@@ -4,6 +4,7 @@ content:
 - Adding Custom Failure Messages
 - Running Tests
 - Test Organization
+- Submodules in Integration Tests
 - Assert
 - Assert_Eq
 - Testing Task
