Changed visibility settings for images and Cargo in new sections

--- a/Introduction/Getting started/Editor/task-info.yaml
+++ b/Introduction/Getting started/Editor/task-info.yaml
@@ -3,8 +3,8 @@ files:
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: edu_context_menu_run.png
-  visible: true
+  visible: false
 - name: edu_editor.png
-  visible: true
+  visible: false
