--- a/Introduction/Getting started/Navigating Around/task-info.yaml
+++ b/Introduction/Getting started/Navigating Around/task-info.yaml
@@ -3,6 +3,6 @@ files:
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: edu_course_overview.png
-  visible: true
+  visible: false
