--- a/Introduction/Getting started/Task Description/task-info.yaml
+++ b/Introduction/Getting started/Task Description/task-info.yaml
@@ -3,22 +3,22 @@ files:
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
-  visible: true
+  visible: false
 - name: images/back.svg
-  visible: true
+  visible: false
 - name: images/commentTask.svg
-  visible: true
+  visible: false
 - name: images/edu_next_button.png
-  visible: true
+  visible: false
 - name: images/edu_peek_solution.png
-  visible: true
+  visible: false
 - name: images/edu_task_description_window_settings.png
-  visible: true
+  visible: false
 - name: images/forward.svg
-  visible: true
+  visible: false
 - name: images/gear.svg
-  visible: true
+  visible: false
 - name: images/hideToolWindow.svg
-  visible: true
+  visible: false
 - name: images/reset.svg
-  visible: true
+  visible: false
