EDC-392 Mastering the IDE task about "Introduce Variable" refactoring

--- a/Common Programming Concepts/Variables/lesson-info.yaml
+++ b/Common Programming Concepts/Variables/lesson-info.yaml
@@ -3,6 +3,7 @@ content:
 - Variables and Mutability
 - New Variable Binding
 - Differences Between Variables and Constants
+- Introduce Variable Refactoring
 - Shadowing
 - Variable Type
 - Mutable Variable Binding
