--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,4 +1,4 @@
-title: Rustlings
+title: rustlings
 language: English
 summary: Small exercises to get you used to reading and writing Rust code! The materials
   are based on the original course "rustlings" created by Carol Nichols! The course
