--- a/Type Conversions/Type Conversions/FromStr/task-info.yaml
+++ b/Type Conversions/Type Conversions/FromStr/task-info.yaml
@@ -3,9 +3,9 @@ files:
 - name: src/lib.rs
   visible: true
   placeholders:
-  - offset: 251
-    length: 954
-    placeholder_text: // Write your code here
+  - offset: 219
+    length: 665
+    placeholder_text: /* TODO */
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
