--- a/Iterators and Closures/Standard Library Types/Count Progress/task-info.yaml
+++ b/Iterators and Closures/Standard Library Types/Count Progress/task-info.yaml
@@ -2,6 +2,13 @@ type: edu
 files:
 - name: src/lib.rs
   visible: true
+  placeholders:
+  - offset: 813
+    length: 142
+    placeholder_text: /* TODO */
+  - offset: 403
+    length: 48
+    placeholder_text: /* TODO */
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
