--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,9 +1,9 @@
 title: rustlings
 language: English
 summary: <p>This course contains small exercises aimed to familiarize you with reading and writing Rust code.
-  It is an adaptation of the exciting <a href=”https://github.com/rust-lang/rustlings”>rustlings</a> course created by Carol Nichols.
+  It is an adaptation of the exciting <a href="https://github.com/rust-lang/rustlings">rustlings</a> course created by Carol Nichols.
   The adaptation tries to stick closely to the original spirit of rustlings but provides a few helpful hints about Rust development added
-  inside the IDE. It also contains materials from <a href=”https://doc.rust-lang.org/book/index.html”>The Rust Programming Language Book</a>
+  inside the IDE. It also contains materials from <a href="https://doc.rust-lang.org/book/index.html">The Rust Programming Language Book</a>
   written by Steve Klabnik and Carol Nichols with contributions by the Rust Community.</p>
 
   <p>In this course, you will learn about common programming concepts, such as variables, data types,
@@ -14,7 +14,7 @@ summary: <p>This course contains small exercises aimed to familiarize you with r
 
   <p>Have fun and good luck!</p>
 
-  <p>P.S. Want to contribute? Feel free to send a pull request to this course’s <a href=”https://github.com/jetbrains-academy/rustlings-course”>git repo</a>.</p>
+  <p>P.S. Want to contribute? Feel free to send a pull request to this course’s <a href="https://github.com/jetbrains-academy/rustlings-course">git repo</a>.</p>
 vendor:
   name: JetBrains
   email: support@jetbrains.com
