--- a/Introduction/Getting started/Hello World/task-info.yaml
+++ b/Introduction/Getting started/Hello World/task-info.yaml
@@ -5,7 +5,7 @@ files:
   placeholders:
   - offset: 16
     length: 26
-    placeholder_text: // put you code here to launch it
+    placeholder_text: // put your code here to launch it
 - name: Cargo.toml
   visible: false
 - name: tests/tests.rs
