--- a/Recoverable and Unrecoverable Errors/Error Handling/Custom Errors/task-info.yaml
+++ b/Recoverable and Unrecoverable Errors/Error Handling/Custom Errors/task-info.yaml
@@ -6,6 +6,12 @@ files:
   - offset: 433
     length: 117
     placeholder_text: /* TODO */
+  - offset: 782
+    length: 216
+    placeholder_text: |-
+      let x: i64 = s.parse().unwrap();
+          PositiveNonzeroInteger::new(x)
+              .map_err(ParsePosNonzeroError::from_creation)
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
