--- a/Type Conversions/Type Conversions/FromStr/task-info.yaml
+++ b/Type Conversions/Type Conversions/FromStr/task-info.yaml
@@ -3,12 +3,12 @@ files:
 - name: src/lib.rs
   visible: true
   placeholders:
-  - offset: 219
-    length: 665
+  - offset: 519
+    length: 872
     placeholder_text: /* TODO */
 - name: src/main.rs
   visible: true
 - name: Cargo.toml
   visible: true
 - name: tests/tests.rs
-  visible: false
+  visible: true
